# infrafabric-core

./: .env  .gitignore  =0.21.0  API-PERMISSION-FIX.md  API-RESEARCH-SALTSTACK-TERRAFORM.md  AUTONOMOUS-NEXT-TASKS.md  BRANCH-MERGE-STRATEGY.md  CALL_FOR_EXTERNAL_REVIEW.md  CHEF-API-RESEARCH.md  CLAUDE-CODE-CLI-START-HERE.md  CLI-ARCHITECTURE-GAPS-AND-PLAN.md  CLOUD-COMMS-TASK-PROMPT.md  CLOUD-PROMPT-SIMPLE.txt  CLOUDFLARE_R2_RESEARCH.md  CODEOWNERS  CODE_OF_CONDUCT.md  COMPONENT-INDEX.md  CONTRIBUTING.md  COORDINATION-DASHBOARD-SPEC.md  COST-REPORT-SESSION-1.yaml  Cargo.toml  Dockerfile  EXPERT-DEBUG-SUMMARY.md  EXTERNAL_REVIEW_ARENA_BUNDLE.md  EXTERNAL_REVIEW_ARENA_PROMPT.md  EXTERNAL_REVIEW_LINKS.txt  EXTERNAL_REVIEW_PROMPT.md  EXTERNAL_REVIEW_PROMPT_IF_FULL.md  EXTERNAL_REVIEW_PROMPT_IF_UNIVERSE.txt  FEEDBACK_INTEGRATION_REPORT_NOVICE_FOCUS.md  FILLER-TASK-CATALOG.md  FINAL.IF.persona-registry.yaml  FINAL.IF.philosophy-database.yaml  FIX.component-canonicalization.yaml  FIX.guard-constitution.yaml  GEMINI-AUDIT-REPORT-2025-11-10.md  GEMINI-EVALUATION-PROMPT.md  GEMINI-LOGS-SCAN-REPORT-2025-11-10.md  GITEA-ACCESS-INFO.md  GPT5-PRO-REVIEW-PROMPT.md  (+131 more)
.github/: PULL_REQUEST_TEMPLATE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ifctl-metrics.yml  review.yml
annexes/: ANNEX-O-PRECURSOR-CONVERSATION.md  ANNEX-P-GPT5-REFLEXION-CYCLE.md  ANNEX-Q-DEPRECATED-COMPONENTS.md  infrafabric-IF-annexes.md
citations/: 2025-11-13-10agent-swarm.json  EVIDENCE_TABLE.template.csv
citations/examples/: citation_example.json
code/research/: EXECUTION_PLAN.md  analyze_endorser_interest.py  check_fang_affiliations.py  generate_endorser_emails.py  optimize_anthropic_credit.py
code/yologuard/: CLAUDE_CODE_REVIEW_2025-11-08.md  EXTERNAL_REVIEW_RESPONSE_CLAUDE.md  EXTERNAL_REVIEW_RESULTS.md  EXTERNAL_REVIEW_UPDATE.md  FILES_FOR_GPT5.txt  GPT5_EXTERNAL_REVIEW_PROMPT.md  GPT5_GOALS_ROADMAP.md  GPT5_HANDOFF.md  README.md  (+4 more)
config/: guardian-registry.yaml  live_sources.yaml
credentials/: s2-worker-template-credentials.json
deploy/: kamailio-production.yml
docs/: A3_BENCHMARK_VERIFICATION.md  ABLATIONS.md  ARCHITECTURE.md  AUDIT-RESPONSE-ACTION-PLAN.md  CAPABILITY-REGISTRY-SCHEMA.md  CAPABILITY-SCHEMA-REFERENCE.md  CHANGELOG.md  CLAUDE-CLOUD-PROMPT-R4.md  CLAUDE_V4_EPIC_COMPREHENSIVE_PROMPT.md  CLI-INTEGRATION-AUDIT-PHASE-0.md  CLI-INTEGRATION-GUIDE.md  CLI-USER-GUIDE.md  CLI-WITNESS-GUIDE.md  CLI-WITNESS-INTEGRATION.md  COORDINATOR-INTEGRATION-PLAN.md  DATA-GUIDE.md  DELIVERY-SUMMARY.md  DIGITALOCEAN-API-COMPREHENSIVE-RESEARCH.md  ERRATA.md  FAQ.md  FILLER-TASK-CATALOG.md  FIRST-STEPS.md  FIX.component-canonicalization.yaml  FIX.guard-constitution.yaml  GCP-CLOUD-STORAGE-API-RESEARCH.md  GCP-COMPUTE-ENGINE-API-RESEARCH.md  GCP-RESEARCH-EXECUTIVE-SUMMARY.md  GCP-RESEARCH-INDEX.md  GEMINI-AUDIT-CHECKLIST.md  GLOSSARY.md  GOOGLE-RESEARCH-MAPPING-TO-IF.md  GPT5PRO-WORK-EVALUATION-IF-IMPACT.md  GUARDED-CLAIMS.md  GUARDIAN-COUNCIL-IMPLEMENTATION.md  H323-CODEC-SELECTION.md  H323-GUARD-COUNCIL.md  H323-KANTIAN-POLICY.md  H323-PRODUCTION-DEPLOY.md  H323-PRODUCTION-RUNBOOK.md  HELLO_W0RLD.md  (+56 more)
evidence/: EVALUATION_QUICKSTART.md  INFRAFABRIC_COMPREHENSIVE_EVALUATION_PROMPT.md  merge_evaluations.py
examples/: README.md  guardian_debate_example.py  if-witness-coordination-hash-chain.py  if_alias_example.py
governance/: DECISION_DISSENT_RUNBOOK.md
guardians/: IF-GUARDIANS-CHARTER.md
infrafabric/: __init__.py  coordination.py  coordinator.py  event_bus.py  executor.py  governor.py  guardians.py  manifests.py  policies.py
logs/: workstream-1-ndi-witness.jsonl
papers/: IF-vision.md  IF-witness.md  INFRAFABRIC-COMPLETE-DOSSIER-v11.md  InfraFabric.md
research/: epic_games_rerun_2025-11-08.md
reviews/: IF-IMPROVEMENTS-V1.1.md  IF-TECHNICAL-REVIEW.md
rfcs/: RFC_HONEYPOT_FALSIFICATION.md  RFC_IF_CITATION_SERVICE.md  RFC_PHILOSOPHY_TAGS.md
scripts/: benchmark_witness.py  validate_message.py
src/: cost_monitor.py
src/chassis/: Cargo.toml
src/chassis/src/: lib.rs
src/cli/: Cargo.toml  README.md  error_handler.py  if-witness.py  if_main.py  if_optimise.py  if_witness.py
src/cli/src/: main.rs
status/: SESSION-TEMPLATE.yaml
templates/: COST-DASHBOARD-GUIDE.md  COST-TRACKING-TEMPLATE.yaml  STATUS-TEMPLATE.yaml
tests/: benchmark_webrtc_latency.spec.ts  load-test-100-mesh.spec.ts  test_adapters_basic.py  test_capability_schema.py  test_chassis_limits.py  test_cli_error_handler.py  test_cli_performance.py  test_cli_witness.py  test_coordinator_broadcast.py  test_coordinator_cas.py  test_coordinator_latency.py  test_event_bus.py  test_executor.py  test_governor_circuit_breaker.py  test_governor_matching.py  test_h323_admission.py  test_h323_perf_baseline.py  test_h323_production_12guardian.py  test_if_main.py  test_if_optimise.py  test_integration_governor_chassis.py  test_ndi_witness.py  test_talent_pipeline.py  test_webrtc_mesh.spec.ts
tools/: alert_launcher.py  budget_alerts.py  citation_validate.py  cli_launcher.py  cost-tracker.py  cost_tracker.py  ifctl.py  live_apis.ts  recalc_metrics.py
(+557 files in other folders)
