[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "if-tools"
version = "0.1.0"
description = "IF.witness CLI + IF.optimise - Provenance tracking and cost management for AI workflows"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["provenance", "audit-trail", "cost-tracking", "ai-workflow", "token-monitoring"]
authors = [
    {name = "InfraFabric"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
    "Topic :: Security",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

dependencies = [
    "click>=8.1.0",
    "cryptography>=41.0.0",
    "reportlab>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[project.urls]
Homepage = "https://github.com/dannystocker/infrafabric"
Documentation = "https://github.com/dannystocker/infrafabric/tree/main/docs"
Repository = "https://github.com/dannystocker/infrafabric"
Issues = "https://github.com/dannystocker/infrafabric/issues"

[project.scripts]
if-witness = "cli.if_witness:cli"
if-optimise = "cli.if_optimise:cli"
if-cost-tracker = "tools.cost_tracker:cli"
if-budget-alerts = "tools.budget_alerts:cli"
if-alert-launcher = "tools.alert_launcher:cli"
if-cost-monitor = "cost_monitor:cli"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["cli*", "witness*", "tools*"]

[tool.setuptools.package-dir]
"" = "src"
tools = "tools"

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt", "*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "--verbose",
    "--cov=src",
    "--cov=tools",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.coverage.run]
source = ["src", "tools"]
omit = [
    "*/tests/*",
    "*/test_*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
